fix: size of the warning on mobile landscape

--- a/src/routes/Board/styles.less
+++ b/src/routes/Board/styles.less
@@ -222,3 +222,11 @@
         }
     }
 }
+
+@media @phone-landscape {
+    .board-container {
+        .board-warning-container {
+            left: calc(var(--safe-area-inset-left) + var(--vertical-nav-bar-size) + 0.5rem);
+        }
+    }
+}
